# simple-slack-logger

./: README.md  pyproject.toml
.github/workflows/: package.yml
slack_logger/: __init__.py
